# flomerce

./: .gitattributes  .gitignore  .replit  .tmp_old_CategoriesSection.jsx  DATABASE_ARCHITECTURE.md  MIGRATION_PLAN.md  TRANSLATION_MIGRATION.md  auth-signup.html  build.js  cloudflare-worker.js  collection.json  dashboard.html  dashboardbackup.html  footer_old_65e868.jsx  index.html  landing.html  login.html  manifest.json  netlify-vars.txt  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.md  run-server.js  sedfIo1s4  server.js  site-template.html  wrangler.toml
.agents/: agent_assets_metadata.toml
backend/: .dev.vars  config.js  dev-server.js  i18n-manifest.json  package-lock.json  package.json  wrangler.toml
dashboard/: site-service.js
docs/: CUSTOM_DOMAIN_SETUP.md  GITHUB_CLOUDFLARE_SETUP.md  MIGRATION_PLAN_FIREBASE_TO_CLOUDFLARE.md  SHOPPER_TRANSLATION_REFACTOR.md  STOREFRONT_TRANSLATION_FIXES.md  i18n-handoff.md
frontend/: _redirects  index.html  manifest.json  sw.js
functions/: firebase-admin-config.js  send-email.js  site-router.js
guide/: admin-dashboard.html  admin-panel.html  cart-panel-template.html  cleanup-service-workers.html  gold-bangles.html  manifest.json  meenakari-necklace.html  package.json  privacy-policy.html  reset-password.html  test-multi-image-product.json  update-footer-all-pages.js  upload-demo-products.js
guide2/: NOTIFICATION_SYSTEM_ROOT_CAUSE_ANALYSIS.md  meenakari-rings.html  silver-rings.html  tsconfig.json
public/: index.html  login.html  signup.html
scripts/: build-merchant-app-plan-pdf.cjs  (+3 more)
(+33173 files in other folders)
